--- a/saul-webapp/app/views/main.scala.html
+++ b/saul-webapp/app/views/main.scala.html
@@ -1,4 +1,4 @@
-@(title: String)(content: Html)
+@(title: String)(implicit req: RequestHeader)
 
 <!DOCTYPE html>
 
@@ -7,10 +7,14 @@
         <title>@title</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
-        <script src="@routes.Assets.versioned("javascripts/hello.js")" type="text/javascript"></script>
         <link rel="stylesheet" media="screen" href="@routes.WebJarAssets.at(WebJarAssets.locate("bootstrap.min.css"))">
         <script src="@routes.WebJarAssets.at(WebJarAssets.locate("jquery.min.js"))"></script>
         <script src="@routes.WebJarAssets.at(WebJarAssets.locate("js/bootstrap.min.js"))"></script>
+        @helper.javascriptRouter("jsRoutes")(
+            routes.javascript.Application.index,
+            routes.javascript.Application.updateCode
+        )
+        <script src="@routes.Assets.versioned("javascripts/script.js")" type="text/javascript"></script>
     </head>
     <body>
         <div class="page-header">
@@ -37,11 +41,16 @@
             </nav>
 
             <div class="panel-body" style="float : left ;width: 50%">
-                <div class="form-group">
-                    <textarea class="form-control" rows="18" id="code"></textarea>
+                <ul class="nav nav-tabs" id="fileList">
+                    <li class="active" id="fileName1"><a href="#">test.scala</a></li>
+                <button class="btn btn-default" id="uploadFile" style="float:right;"><span class="glyphicon glyphicon-floppy-open" aria-hidden="true"></span></button>
+                <button class="btn btn-default" id="plusFile"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></button>
+                </ul>
+                <div class="form-group" id="workspace">
+                    <textarea class="form-control code active" rows="18" id="code1"></textarea>
                 </div>
                 <div style="text-align: center">
-                    <button type="compile" class="btn btn-default">Compile</button>
+                    <button type="compile" class="btn btn-default" id="compileBtn">Compile</button>
                     <button type="stop" class="btn btn-default">Stop</button>
                 </div>
             </div>
