--- a/saul-webapp/app/views/main.scala.html
+++ b/saul-webapp/app/views/main.scala.html
@@ -12,7 +12,7 @@
         <script src="@routes.WebJarAssets.at(WebJarAssets.locate("js/bootstrap.min.js"))"></script>
         @helper.javascriptRouter("jsRoutes")(
             routes.javascript.Application.index,
-            routes.javascript.Application.updateCode
+            routes.javascript.Application.compileCode
         )
         <script src="@routes.Assets.versioned("javascripts/script.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("javascripts/ace/ace.js")" type="text/javascript" charset="utf-8"></script>
@@ -58,6 +58,7 @@
                 <div style="text-align: center">
                     <button type="compile" class="btn btn-default" id="compileBtn">Compile</button>
                     <button type="stop" class="btn btn-default">Stop</button>
+                    <button type="run" class="btn btn-default" id="runBtn">Run</button>
                 </div>
             </div>
 
