--- a/saul-webapp/app/views/main.scala.html
+++ b/saul-webapp/app/views/main.scala.html
@@ -44,7 +44,7 @@
                     </div>
                 </div>
             </nav>
-
+            <div class="alert alert-danger" id="errors" role="alert"></div>
             <div class="panel-body" style="float : left ;width: 50%">
                 <ul class="nav nav-tabs" id="fileList">
                     <li class="active" id="fileName1"><a href="#">test.scala</a></li>
