--- a/saul-webapp/app/views/main.scala.html
+++ b/saul-webapp/app/views/main.scala.html
@@ -12,8 +12,9 @@
         <script src="@routes.WebJarAssets.at(WebJarAssets.locate("js/bootstrap.min.js"))"></script>
         @helper.javascriptRouter("jsRoutes")(
             routes.javascript.Application.index,
-            routes.javascript.Application.compileCode,
-            routes.javascript.Application.runCode
+            routes.javascript.Application.acceptRunMain,
+            routes.javascript.Application.acceptDisplayModel,
+            routes.javascript.Application.acceptPopulateModel
         )
         <script src="@routes.Assets.versioned("javascripts/script.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("javascripts/ace/ace.js")" type="text/javascript" charset="utf-8"></script>
@@ -58,7 +59,8 @@
                 </div>
                 <div style="text-align: center">
                     <button type="compile" class="btn btn-default" id="compileBtn">Compile</button>
-                    <button type="stop" class="btn btn-default">Stop</button>
+                    <!--<button type="stop" class="btn btn-default">Stop</button>-->
+                    <button type="populate" class="btn btn-default" id="populateBtn">Populate</button>
                     <button type="run" class="btn btn-default" id="runBtn">Run</button>
                 </div>
             </div>
