Implementa front end for data population

--- a/saul-webapp/app/views/main.scala.html
+++ b/saul-webapp/app/views/main.scala.html
@@ -77,22 +77,22 @@
                 <div class="tab-content">
                     <div id="tab1" class="tab active">
                         <div class="panel panel-default">
-                            <div class="panel-body" id="graphParent" style="height: 350px; text-align: center">
+                            <div class="panel-body" id="graphParent1" style="height: 350px; text-align: center">
                                 <div id="graphContainer"></div>
                             </div>
                         </div>
                     </div>
 
                     <div id="tab2" class="tab">
-
-                    </div>
-
-                    <div id="tab3" class="tab">
                         <div class="panel panel-default">
-                            <div class="panel-body" id="graphParent" style="height: 350px; text-align: center">
+                            <div class="panel-body" id="graphParent2" style="height: 350px; text-align: center">
                                 <div id="graphContainer"></div>
                             </div>
                         </div>
+                    </div>
+
+                    <div id="tab3" class="tab">
+
                     </div>
 
                 </div>
