--- a/saul-webapp/public/stylesheets/main.css
+++ b/saul-webapp/public/stylesheets/main.css
@@ -14,13 +14,17 @@
     display: none;
 }
 
-#graphContainer{
+#populatedGraphContainer{
 	height: 100%;
 }
+#schemaGraphContainer{
+    height: 100%;
+}
+
 
 /*----- Tabs -----*/
 .tabs {
-    width:40%;
+    width:50%;
     display:inline-block;
 }
 
