Added bar for showing node value, fixed some issues of KnowEng Example

--- a/saul-webapp/app/views/main.scala.html
+++ b/saul-webapp/app/views/main.scala.html
@@ -83,6 +83,7 @@
     <span class="sr-only">100% Complete</span>
   </div>
 </div>
+
             <div class="panel-body" style="float : left ;width: 50%">
                 <ul class="nav nav-tabs" id="fileList">
                     <li class="active" id="fileName1"><a href="#">test.scala</a></li>
@@ -111,12 +112,13 @@
             </div>
 
             <div class="tabs">
+
                 <ul class="tab-links">
                     <li class="active tab1"><a href="tab1">Data Model</a></li>
                     <li class="tab2"><a href="tab2">Populated Data Model</a></li>
                     <li class="tab3"><a href="tab3">Running Result</a></li>
                 </ul>
-
+                <div class="alert alert-success" id="nodevalue" role="showvalue"></div>
                 <div class="tab-content">
                     <div id="tab1" class="tab active">
                         <div class="panel panel-default">
