Add barebone query command

--- a/saul-webapp/public/stylesheets/main.css
+++ b/saul-webapp/public/stylesheets/main.css
@@ -17,6 +17,12 @@
     display: none;
 }
 
+input[type="text"], textarea {
+
+  background-color : #333333;
+  color: #ffffff;
+}
+
 #populatedGraphContainer{
 	height: 100%;
 }
