temporary fix to knowEng model

--- a/saul-webapp/app/views/main.scala.html
+++ b/saul-webapp/app/views/main.scala.html
@@ -53,26 +53,26 @@
                 <button type="button" class="btn btn-info well2" id="ToyExample">
                     ToyExample
                 </button>
-                <button type="button" class="btn btn-info well2" id="EdisonFeatures">
-                    EdisonFeatures
-                </button>
-                <button type="button" class="btn btn-info well2" id="POSTagger">
-                    POSTagger
-                </button>
-                <button type="button" class="btn btn-info well2" id="EntityMentionRelation">
-                    EntityMentionRelation
-                </button>
-                <button type="button" class="btn btn-info well2" id="SemanticRoleLabeling">
-                    SemanticRoleLabeling
-                </button>
-                <button type="button" class="btn btn-info well2" id="SetCover">
-                    SetCover
-                </button>
                 <button type="button" class="btn btn-info well2" id="KnowEng">
                     KnowEng
                 </button>
                 <button type="button" class="btn btn-info well2" id="EmailSpam">
                     EmailSpam
+                </button>
+                <button type="button" class="btn btn-warning well2" id="EdisonFeatures">
+                    EdisonFeatures
+                </button>
+                <button type="button" class="btn btn-danger well2" id="POSTagger">
+                    POSTagger
+                </button>
+                <button type="button" class="btn btn-danger well2" id="EntityMentionRelation">
+                    EntityMentionRelation
+                </button>
+                <button type="button" class="btn btn-danger well2" id="SemanticRoleLabeling">
+                    SemanticRoleLabeling
+                </button>
+                <button type="button" class="btn btn-danger well2" id="SetCover">
+                    SetCover
                 </button>
             </div>
             </div>
