Finish query by input box

--- a/saul-webapp/app/views/main.scala.html
+++ b/saul-webapp/app/views/main.scala.html
@@ -118,7 +118,7 @@
                     <button type="run" class="btn btn-default" id="runBtn">Run</button>
                 </div>
                 <div style="text-align: center">
-                    <input type="text" name="query">
+                    <input type="text" name="query" id="query">
                     <button type="query" class="btn btn-default" id="queryBtn">Query</button>
                 </div>
             </div>
