--- a/saul-webapp/public/stylesheets/main.css
+++ b/saul-webapp/public/stylesheets/main.css
@@ -25,6 +25,7 @@ input[type="text"], textarea {
 
   background-color : #333333;
   color: #ffffff;
+  width: 700px;
 }
 
 #populatedGraphContainer{
