--- a/saul-webapp/app/views/main.scala.html
+++ b/saul-webapp/app/views/main.scala.html
@@ -16,7 +16,8 @@
             routes.javascript.Application.acceptRunMain,
             routes.javascript.Application.acceptDisplayModel,
             routes.javascript.Application.acceptPopulateModel,
-            routes.javascript.Application.acceptQuery
+            routes.javascript.Application.acceptQuery,
+            routes.javascript.Application.visualize
         )
         <script src="@routes.Assets.versioned("javascripts/script.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("javascripts/ace/ace.js")" type="text/javascript" charset="utf-8"></script>
@@ -112,14 +113,15 @@
                     <div id="editor1" class="editor active"></div>
                 </div>
                 <div style="text-align: center">
+                    <input type="text" name="query" id="query">
+                    <button type="query" class="btn btn-default" id="queryBtn">Query</button>
+                </div>
+                <div style="text-align: center">
                     <button type="compile" class="btn btn-default" id="compileBtn">Compile</button>
                     <!--<button type="stop" class="btn btn-default">Stop</button>-->
                     <button type="populate" class="btn btn-default" id="populateBtn">Populate</button>
                     <button type="run" class="btn btn-default" id="runBtn">Run</button>
-                </div>
-                <div style="text-align: center">
-                    <input type="text" name="query" id="query">
-                    <button type="query" class="btn btn-default" id="queryBtn">Query</button>
+                    <button type="visualize" class="btn btn-default" id="visualizeBtn">Visualize all</button>
                 </div>
             </div>
 
