--- a/saul-webapp/app/views/main.scala.html
+++ b/saul-webapp/app/views/main.scala.html
@@ -70,6 +70,7 @@
                 <button type="button" class="btn btn-warning well2" id="EdisonFeatures">
                     EdisonFeatures
                 </button>
+                <!--
                 <button type="button" class="btn btn-danger well2" id="POSTagger">
                     POSTagger
                 </button>
@@ -82,6 +83,7 @@
                 <button type="button" class="btn btn-danger well2" id="SetCover">
                     SetCover
                 </button>
+                -->
             </div>
             </div>
             <div id="hoverBar"></div>
@@ -96,6 +98,8 @@
             <div class="panel-body" style="float : left ;width: 50%;">
                 <ul class="nav nav-tabs" id="fileList">
                     <li class="active" id="fileName1"><a href="#">test.scala</a></li>
+                
+                <div id="btnList">
                 <button class="btn btn-danger bb" id="deleteFile" style="float:right;"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
                 <button class="btn btn-primary bb" id="uploadFile" style="float:right;" onclick="document.getElementById('selectedFile').click();"><span class="glyphicon glyphicon-floppy-open" aria-hidden="true"></span></button>
                 
@@ -107,6 +111,7 @@
                       <li role="presentation"><a role="menuitem" tabindex="-1" href="#" id="newcla">Classifier</a></li>
                       <li role="presentation"><a role="menuitem" tabindex="-1" href="#" id="newapp">Main App</a></li>
                     </ul>
+                </div>
                 </div>
                 </ul>
                 <div class="form-group" id="workspace">
