--- a/saul-webapp/app/views/main.scala.html
+++ b/saul-webapp/app/views/main.scala.html
@@ -7,10 +7,19 @@
         <title>@title</title>
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
         <link rel="stylesheet" media="screen" href="@routes.WebJarAssets.at(WebJarAssets.locate("bootstrap.min.css"))">
-        <script src="@routes.WebJarAssets.at(WebJarAssets.locate("jquery.min.js"))"></script>
+        <link rel="stylesheet" media="screen" href="@routes.WebJarAssets.at(WebJarAssets.locate("1.1.3/dist/css/shepherd-theme-arrows.css"))">
+        <script src="@routes.WebJarAssets.at(WebJarAssets.locate("js/jquery.min.js"))"></script>
         <script src="@routes.WebJarAssets.at(WebJarAssets.locate("js/bootstrap.min.js"))"></script>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/shepherd-theme-arrows.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
+        <script src="@routes.Assets.versioned("javascripts/sigma.min.js")" type="text/javascript"></script>
+        <script src="@routes.WebJarAssets.at(WebJarAssets.locate("tether.min.js"))"></script>
+        <script src="@routes.WebJarAssets.at(WebJarAssets.locate("shepherd.min.js"))"></script>
+        <script src="@routes.WebJarAssets.at(WebJarAssets.locate("src-min/ace.js"))"></script>
+        <script src="@routes.WebJarAssets.at(WebJarAssets.locate("src-min/mode-scala.js"))"></script>
+        <script src="@routes.WebJarAssets.at(WebJarAssets.locate("src-min/mode-java.js"))"></script>
+        <script src="@routes.WebJarAssets.at(WebJarAssets.locate("src-min/theme-twilight.js"))"></script>
+        <script src="@routes.WebJarAssets.at(WebJarAssets.locate("sigma.layout.forceAtlas2.min.js"))"></script>
+        <script src="@routes.WebJarAssets.at(WebJarAssets.locate("sigma.plugins.dragNodes.min.js"))"></script>
         @helper.javascriptRouter("jsRoutes")(
             routes.javascript.Application.index,
             routes.javascript.Application.acceptRunMain,
@@ -19,18 +28,11 @@
             routes.javascript.Application.acceptQuery,
             routes.javascript.Application.visualize
         )
+
         <script src="@routes.Assets.versioned("javascripts/main.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("javascripts/graph.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.versioned("javascripts/ace/ace.js")" type="text/javascript" charset="utf-8"></script>
-        <script src="@routes.Assets.versioned("javascripts/ace/mode-scala.js")" type="text/javascript" charset="utf-8"></script>
-        <script src="@routes.Assets.versioned("javascripts/ace/mode-java.js")" type="text/javascript" charset="utf-8"></script>
-        <script src="@routes.Assets.versioned("javascripts/ace/theme-twilight.js")" type="text/javascript" charset="utf-8"></script>
-        <script src="@routes.Assets.versioned("javascripts/sigma.min.js")" type="text/javascript" charset="utf-8"></script>
         <script src="@routes.Assets.versioned("javascripts/plugins/settings.js")" type="text/javascript" charset="utf-8"></script>
         <script src="@routes.Assets.versioned("javascripts/plugins/sigma.canvas.edges.labels.curve.js")" type="text/javascript" charset="utf-8"></script>
-        <script src="@routes.Assets.versioned("javascripts/plugins/sigma.plugins.dragNodes.min.js")" type="text/javascript" charset="utf-8"></script>
-        <script src="@routes.Assets.versioned("javascripts/tether.js")" type="text/javascript" charset="utf-8"></script>
-        <script src="@routes.Assets.versioned("javascripts/shepherd.min.js")" type="text/javascript" charset="utf-8"></script>
         <script src="@routes.Assets.versioned("javascripts/introduction.js")" type="text/javascript" charset="utf-8"></script>
         
         
