Added stats for nodes have numerical value

--- a/saul-webapp/app/views/main.scala.html
+++ b/saul-webapp/app/views/main.scala.html
@@ -134,7 +134,7 @@
     <button type="visualize" class="btn btn-default" id="visualizeBtn">Visualize all</button>
 </div>
 </div>
-
+<div id="statisticsWrapper" class="bg-info"></div>
 <div class="tabs panel-body">
 
     <ul class="nav nav-tabs" id="gtabs">
